# beacon_navigation_ros

./: README.md
beacon_gazebo_plugin/: CMakeLists.txt  README.md  package.xml
beacon_gazebo_plugin/include/beacon_gazebo_plugin/: rssi_noise.h
beacon_gazebo_plugin/launch/: beacon.launch  robot.launch  robot_autonet_v1.launch  robot_vc_robot_v1.launch  test.launch
beacon_gazebo_plugin/models/beacon/: model.sdf
beacon_gazebo_plugin/msg/: BeaconSimPose.msg  ReceiverIn.msg
beacon_gazebo_plugin/scripts/: generate_beacons.py  test_plotter.py
beacon_gazebo_plugin/scripts/experements/: simple_sim.py
beacon_gazebo_plugin/scripts/tools/: test_go.py  test_pose_est.py
beacon_gazebo_plugin/src/: HelloPlugin.cpp  beacon_model_plugin.cpp  receiver_model_plugin.cpp  rssi_noise.cpp
beacon_gazebo_plugin/urdf/: autonet_v1.xacro  autonet_v1_gazebo.xacro  macros.xacro
beacon_gazebo_plugin/urdf/autonet_v1/: autonet_v1.xacro  autonet_v1_gazebo.xacro
beacon_gazebo_plugin/urdf/vc_robot_v1/: vc_robot.xacro  vc_robot_v1.xacro  vc_robot_v1_gazebo.xacro
beacon_gazebo_plugin/worlds/: test.world
beacon_gazebo_sim/: CMakeLists.txt  README.md  package.xml
beacon_gazebo_sim/include/beacon_gazebo_sim/: rssi_noise.h
beacon_gazebo_sim/launch/: beacon.launch  robot_autonet_v1.launch  robot_vc_robot_v1.launch  test.launch
beacon_gazebo_sim/models/beacon/: model.config  model.sdf
beacon_gazebo_sim/msg/: ReceiverIn.msg  ReceiverInSyncPacked.msg
beacon_gazebo_sim/scripts/experements/: rssi_noise_test.py
beacon_gazebo_sim/scripts/tools/: get_data_from_sim.py  test_plotter.py  test_pose_est.py
beacon_gazebo_sim/src/: beacon_model_plugin.cpp  beacons_sync_world_plugin.cpp  odometry_shifter.py  receiver_model_plugin.cpp  rssi_noise.cpp
beacon_gazebo_sim/urdf/autonet_v1/: autonet_v1.xacro  autonet_v1_gazebo.xacro  macros.xacro
beacon_gazebo_sim/urdf/vc_robot_v1/: macros.xacro  vc_robot_v1.xacro  vc_robot_v1_gazebo.xacro
beacon_gazebo_sim/worlds/: test.world  test_old.world
beacon_simple_nav/: CMakeLists.txt  package.xml  setup.py
beacon_simple_nav/include/beacon_simple_nav/utils/: Test.py
beacon_simple_nav/src/: simple_nav_node.py
